test/files/invalid/include_not_exists.stderr
error: Could not read file "test/files/invalid/foo": No such file or directory (os error 2)
  ┌─ test/files/invalid/include_not_exists.fbs:1:9
  │
1 │ include "foo";
  │         ^^^^^

